set colour to yellow on keyboard for correct letter wrong position

--- a/src/styles/Wordle.css
+++ b/src/styles/Wordle.css
@@ -176,6 +176,7 @@
 .key.wrong-position {
   background-color: #c9b458;
   color: white;
+  border: 2px solid #b59f3b;
 }
 
 .message {
